--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/thenes_acer/drak_acer.css">
+    <link rel="stylesheet" href="/lpp.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>炁体源流</title>
   </head>
   <body>
     <div id="app"></div>
